--- a/templates/default/sentinel.conf.erb
+++ b/templates/default/sentinel.conf.erb
@@ -1,6 +1,6 @@
 # Example sentinel.conf
 
-# redisio Cookbook additions
+# rackspace_redis Cookbook additions
 <% unless @job_control == 'upstart' %>
 daemonize yes
 <% end %>
