--- a/templates/default/redis.upstart.conf.erb
+++ b/templates/default/redis.upstart.conf.erb
@@ -1,5 +1,5 @@
 description "Start the redis instance on port <%= @port %>"
-author "Installed by chef redisio cookbook"
+author "Installed by chef rackspace_redis cookbook"
 
 #start on runlevel [2345]
 stop on runlevel [06]
